@@ -1,3 +1,4 @@
+7/7/14 rename GameModel.gameState to GameModel.states
 7/7/14 factor out private constants in game model
 7/7/14 rename Molecule.imageConstructor to nodeConstructor, since molecules are scenery Nodes, not images
 7/7/14 pull out Molecule into its own js file, since its public interface is used outside of MoleculeFactory
